Source/WebCore/platform/MemoryPressureHandler.h
@@ -69,6 +69,8 @@ public:
         m_lowMemoryHandler = handler;
     }
 
+    void jettisonExpensiveObjectsOnTopLevelNavigation();
+
     bool isUnderMemoryPressure() const { return m_underMemoryPressure; }
     void setUnderMemoryPressure(bool b) { m_underMemoryPressure = b; }
 
